[1.5.0/amd64] Speed up Debian packaging using -Zgzip

--- a/1.5.0/amd64/packages/autoware-data/debian/rules
+++ b/1.5.0/amd64/packages/autoware-data/debian/rules
@@ -113,3 +113,7 @@ override_dh_strip:
 
 override_dh_shlibdeps:
 	# Skip shared library dependency detection
+
+override_dh_builddeb:
+	# Use gzip instead of xz for faster compression (data is already compressed)
+	dh_builddeb -- -Zgzip
