--- a/1.5.0/amd64/packages/autoware-localrepo/debian/rules
+++ b/1.5.0/amd64/packages/autoware-localrepo/debian/rules
@@ -24,3 +24,7 @@ override_dh_strip:
 
 override_dh_shlibdeps:
 	# Skip shared library dependency detection
+
+override_dh_builddeb:
+	# Use gzip instead of xz for faster compression (contains .deb files)
+	dh_builddeb -- -Zgzip
