--- a/1.5.0/amd64/packages/autoware-maps/debian/rules
+++ b/1.5.0/amd64/packages/autoware-maps/debian/rules
@@ -13,3 +13,7 @@ override_dh_auto_install:
 	install -d $(CURDIR)/debian/autoware-maps/opt/autoware/1.5.0/share/autoware_maps
 	cp -r src/sample-map-planning $(CURDIR)/debian/autoware-maps/opt/autoware/1.5.0/share/autoware_maps/
 	cp -r src/sample-map-rosbag $(CURDIR)/debian/autoware-maps/opt/autoware/1.5.0/share/autoware_maps/
+
+override_dh_builddeb:
+	# Use gzip instead of xz for faster compression
+	dh_builddeb -- -Zgzip
