--- a/1.5.0/jp62/packages/autoware-config/debian/rules
+++ b/1.5.0/jp62/packages/autoware-config/debian/rules
@@ -4,11 +4,23 @@
 	dh $@
 
 override_dh_auto_install:
-	install -d $(CURDIR)/debian/autoware-config/opt/autoware
-	install -m 644 src/cyclonedds.xml $(CURDIR)/debian/autoware-config/opt/autoware/
-	install -m 755 src/autoware-env $(CURDIR)/debian/autoware-config/opt/autoware/
-	install -m 755 src/autoware-setup $(CURDIR)/debian/autoware-config/opt/autoware/
+	# Install setup scripts to /opt/autoware/1.5.0/
+	install -d $(CURDIR)/debian/autoware-config/opt/autoware/1.5.0
+	install -m 644 src/setup.bash $(CURDIR)/debian/autoware-config/opt/autoware/1.5.0/
+	install -m 644 src/setup.zsh $(CURDIR)/debian/autoware-config/opt/autoware/1.5.0/
+	install -m 644 src/setup.sh $(CURDIR)/debian/autoware-config/opt/autoware/1.5.0/
+	install -m 644 src/local_setup.bash $(CURDIR)/debian/autoware-config/opt/autoware/1.5.0/
+	install -m 644 src/local_setup.zsh $(CURDIR)/debian/autoware-config/opt/autoware/1.5.0/
+	install -m 644 src/local_setup.sh $(CURDIR)/debian/autoware-config/opt/autoware/1.5.0/
+
+	# Install config files to /opt/autoware/1.5.0/config/
+	install -d $(CURDIR)/debian/autoware-config/opt/autoware/1.5.0/config
+	install -m 644 src/cyclonedds.xml $(CURDIR)/debian/autoware-config/opt/autoware/1.5.0/config/
+
+	# Install sysctl configuration
 	install -d $(CURDIR)/debian/autoware-config/etc/sysctl.d
 	install -m 644 src/10-cyclone-max.conf $(CURDIR)/debian/autoware-config/etc/sysctl.d/
+
+	# Install systemd service for multicast on loopback
 	install -d $(CURDIR)/debian/autoware-config/etc/systemd/system
 	install -m 644 src/multicast-lo.service $(CURDIR)/debian/autoware-config/etc/systemd/system/
