--- a/1.5.0/jp62/packages/autoware-theme/debian/control
+++ b/1.5.0/jp62/packages/autoware-theme/debian/control
@@ -2,7 +2,7 @@ Source: autoware-theme
 Section: misc
 Priority: optional
 Maintainer: Jerry Lin <jerry73204@gmail.com>
-Build-Depends: debhelper-compat (= 13), aria2, ca-certificates
+Build-Depends: debhelper-compat (= 13)
 Standards-Version: 4.6.2
 
 Package: autoware-theme
