--- a/1.5.0/amd64/debian-overrides/autoware_overlay_rviz_plugin/debian/control
+++ b/1.5.0/amd64/debian-overrides/autoware_overlay_rviz_plugin/debian/control
@@ -2,12 +2,13 @@ Source: ros-humble-autoware-overlay-rviz-plugin-1-5-0
 Section: misc
 Priority: optional
 Maintainer: Khalil Selyan <khalil@leodrive.ai>
-Build-Depends: debhelper (>= 12.0.0), libboost-all-dev, ros-humble-ament-cmake-auto, ros-humble-ament-index-cpp, ros-humble-ament-lint-auto <!nocheck>, ros-humble-autoware-internal-planning-msgs-1-5-0, ros-humble-autoware-lint-common-1-5-0 <!nocheck>, ros-humble-autoware-perception-msgs-1-5-0, ros-humble-autoware-vehicle-msgs-1-5-0, ros-humble-rviz-common, ros-humble-rviz-ogre-vendor, ros-humble-rviz-rendering
-Homepage: 
+Build-Depends: debhelper (>= 12.0.0), ros-humble-ament-cmake-auto, ros-humble-autoware-cmake-1-5-0, ros-humble-ament-index-cpp, ros-humble-autoware-internal-planning-msgs-1-5-0, ros-humble-autoware-perception-msgs-1-5-0, ros-humble-autoware-vehicle-msgs-1-5-0, ros-humble-rviz-common, ros-humble-rviz-rendering, libboost-all-dev
+Homepage:
 Standards-Version: 3.9.2
 
 Package: ros-humble-autoware-overlay-rviz-plugin-1-5-0
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libboost-all-dev, ros-humble-ament-index-cpp, ros-humble-autoware-internal-planning-msgs-1-5-0, ros-humble-autoware-perception-msgs-1-5-0, ros-humble-autoware-vehicle-msgs-1-5-0, ros-humble-rviz-common, ros-humble-rviz-ogre-vendor, ros-humble-rviz-rendering
+Depends: ${shlibs:Depends}, ${misc:Depends}, ros-humble-rviz-ogre-vendor, libboost-all-dev, ros-humble-ament-index-cpp, ros-humble-autoware-internal-planning-msgs-1-5-0, ros-humble-autoware-perception-msgs-1-5-0, ros-humble-autoware-vehicle-msgs-1-5-0, ros-humble-rviz-common, ros-humble-rviz-rendering
+Replaces: ros-humble-autoware-mission-details-overlay-rviz-plugin-1-5-0
 Description: RViz2 plugin for 2D overlays in the 3D view.
  Mainly a port of the JSK overlay plugin (https://github.com/jsk-ros-pkg/jsk_visualization).
