[1.5.0/*] Correct autoware-full and autoware-ros-packages target architecture

--- a/1.5.0/amd64/packages/autoware-full/debian/control
+++ b/1.5.0/amd64/packages/autoware-full/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper-compat (= 13)
 Standards-Version: 4.6.2
 
 Package: autoware-full
-Architecture: any
+Architecture: all
 Depends: ${misc:Depends},
          autoware-config,
          autoware-theme,
