--- a/1.5.0/jp62/justfile
+++ b/1.5.0/jp62/justfile
@@ -81,6 +81,14 @@ localrepo:
 
     echo "✓ autoware-localrepo built with $count bundled packages"
 
+# Test localrepo installation in a clean Docker container
+test:
+    ./test/run.sh
+
+# Run planning simulation in test container (requires X11 display and NVIDIA GPU)
+sim map_path="$HOME/autoware_map/sample-map-planning":
+    ./test/sim/run.sh "{{map_path}}"
+
 # Clean meta-package build artifacts (keeps ROS packages in build/)
 clean:
     @echo "Cleaning meta-package artifacts..."
