[1.5.0/*] Change compression to -Zxz for all meta packages

--- a/1.5.0/amd64/packages/autoware-data/debian/rules
+++ b/1.5.0/amd64/packages/autoware-data/debian/rules
@@ -115,5 +115,5 @@ override_dh_shlibdeps:
 	# Skip shared library dependency detection
 
 override_dh_builddeb:
-	# Use gzip instead of xz for faster compression (data is already compressed)
-	dh_builddeb -- -Zgzip
+	# Use xz for better compression
+	dh_builddeb -- -Zxz
