--- a/1.5.0/jp62/packages/autoware-localrepo/debian/rules
+++ b/1.5.0/jp62/packages/autoware-localrepo/debian/rules
@@ -27,5 +27,5 @@ override_dh_shlibdeps:
 	# Skip shared library dependency detection
 
 override_dh_builddeb:
-	# Use gzip instead of xz for faster compression (contains .deb files)
-	dh_builddeb -- -Zgzip
+	# Use xz for better compression
+	dh_builddeb -- -Zxz
