--- a/1.5.0/amd64/packages/autoware-data/debian/control
+++ b/1.5.0/amd64/packages/autoware-data/debian/control
@@ -5,7 +5,7 @@ Maintainer: Jerry Lin <jerry73204@gmail.com>
 Build-Depends: debhelper-compat (= 13)
 Standards-Version: 4.6.2
 
-Package: autoware-data
+Package: autoware-data-1-5-0
 Architecture: all
 Depends: ${misc:Depends}
 Description: Autoware ML model data files
