--- a/1.5.0/jp62/packages/autoware-config/debian/control
+++ b/1.5.0/jp62/packages/autoware-config/debian/control
@@ -5,7 +5,7 @@ Maintainer: Jerry Lin <jerry73204@gmail.com>
 Build-Depends: debhelper-compat (= 13)
 Standards-Version: 4.6.2
 
-Package: autoware-config
+Package: autoware-config-1-5-0
 Architecture: all
 Depends: ${misc:Depends},
          ros-humble-rmw-cyclonedds-cpp
