--- a/1.5.0/jp62/packages/autoware-maps/debian/control
+++ b/1.5.0/jp62/packages/autoware-maps/debian/control
@@ -5,7 +5,7 @@ Maintainer: Jerry Lin <jerry73204@gmail.com>
 Build-Depends: debhelper-compat (= 13), unzip
 Standards-Version: 4.6.2
 
-Package: autoware-maps
+Package: autoware-maps-1-5-0
 Architecture: all
 Depends: ${misc:Depends}
 Description: Autoware sample maps for demos and tutorials
