--- a/1.5.0/jp62/packages/autoware-theme/debian/control
+++ b/1.5.0/jp62/packages/autoware-theme/debian/control
@@ -5,7 +5,7 @@ Maintainer: Jerry Lin <jerry73204@gmail.com>
 Build-Depends: debhelper-compat (= 13)
 Standards-Version: 4.6.2
 
-Package: autoware-theme
+Package: autoware-theme-1-5-0
 Architecture: all
 Depends: ${misc:Depends}, qt5ct
 Description: Autoware Qt5 theme and RViz icons
